不要な空行を削除

--- a/01_pythonの基本.ipynb
+++ b/01_pythonの基本.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 1 章 Python の基本\n"
+    "# 1 章 Python の基本"
    ],
    "metadata": {
     "collapsed": false,
@@ -15,7 +15,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## コメント\n"
+    "## コメント"
    ],
    "metadata": {
     "collapsed": false,
@@ -47,7 +47,7 @@
    "source": [
     "# 一行コメントです。\n",
     "\n",
-    "print('コメントのテスト')   # これもコメントです。\n",
+    "print('コメントのテスト')  # これもコメントです。\n",
     "\n",
     "\"\"\"ヒアドキュメント\n",
     "\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## ドックストリング\n"
+    "## ドックストリング"
    ],
    "metadata": {
     "collapsed": false,
@@ -102,7 +102,8 @@
     "\n",
     "    何もしない。\n",
     "    \"\"\"\n",
-    "    print(\"Do nothing...\")\n",
+    "    print(msg)\n",
+    "\n",
     "\n",
     "help(func)\n",
     "print('-' * 10)\n",
@@ -132,7 +133,7 @@
     "| タプル    | tuple   |    ×    | (), (3, 9), 'here',                |\n",
     "| リスト    | list    |    ○    | [], [3, 'tom'], [[32, 67], 32, 32] |\n",
     "| 辞書     | dict    |    ○    | {}, {'age': 16, 'name': 'Tom'}     |\n",
-    "| 集合     | set     |    ○    | {3, 9}                             |\n"
+    "| 集合     | set     |    ○    | {3, 9}                             |"
    ],
    "metadata": {
     "collapsed": false,
@@ -173,7 +174,7 @@
     "\n",
     "**特別な変数名**\n",
     "- アンダースコア（_）で始まる変数は、モジュールからワイルドカード（*）でインポートされない。\n",
-    "- クラス内に二つのアンダースコア（__）で始まる識別子（プロパティ名やメソッド名）は、プライベート識別子になる。\n"
+    "- クラス内に二つのアンダースコア（__）で始まる識別子（プロパティ名やメソッド名）は、プライベート識別子になる。"
    ],
    "metadata": {
     "collapsed": false,
@@ -185,7 +186,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### 予約語\n"
+    "#### 予約語"
    ],
    "metadata": {
     "collapsed": false,
@@ -219,7 +220,7 @@
     }
    ],
    "source": [
-    "help('keywords')\n"
+    "help('keywords')"
    ],
    "metadata": {
     "collapsed": false,
@@ -243,6 +244,7 @@
    ],
    "source": [
     "import keyword\n",
+    "\n",
     "keyword.kwlist"
    ],
    "metadata": {
@@ -255,7 +257,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 代入\n"
+    "## 代入"
    ],
    "metadata": {
     "collapsed": false,
@@ -269,25 +271,13 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "a = 5               # 代入\n",
+    "a = 5  # 代入\n",
     "b = a + 3\n",
-    "a = 12              # 再代入\n",
-    "c = a               # コピー\n",
+    "a = 12  # 再代入\n",
+    "c = a  # コピー\n",
     "\n",
-    "x = y = z = 100     # 複数の名前への代入\n"
+    "x = y = z = 100  # 複数の名前への代入\n"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
