特殊文字列 → ストリングプレフィックス

--- a/03_文字列.ipynb
+++ b/03_文字列.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 特殊文字列"
+    "## ストリングプレフィックス"
    ],
    "metadata": {
     "collapsed": false,
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "r\"name\\tage\\n\""
+    "r\"name\\tage\\n\"  # raw 文字列"
    ],
    "metadata": {
     "collapsed": false,
